--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,51 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>Home</ion-title>
   </ion-navbar>
+
+  <ion-toolbar color="dark">
+    <ion-searchbar></ion-searchbar>
+  </ion-toolbar>
+
 </ion-header>
 
-<ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+<ion-content class="card-background-page">
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+  <ion-card>
+    <img src="assets/imgs/426.jpg"/>
+    <div class="card-title">Sao Paulo</div>
+    <div class="card-subtitle">41 listings</div>
+  </ion-card>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <ion-card>
+      <img src="assets/imgs/291.jpg"/>
+      <div class="card-title">Sao Paulo</div>
+      <div class="card-subtitle">41 listings</div>
+    </ion-card>
+
+    <ion-card>
+        <img src="assets/imgs/420.jpg"/>
+        <div class="card-title">Sao Paulo</div>
+        <div class="card-subtitle">41 listings</div>
+      </ion-card>
+
+      <ion-card>
+          <img src="assets/imgs/425.jpg"/>
+          <div class="card-title">Sao Paulo</div>
+          <div class="card-subtitle">41 listings</div>
+        </ion-card>
+
+        <ion-fab right bottom>
+          <button ion-fab color="primary"><ion-icon name= "add"></ion-icon></button>
+          <ion-fab-list side="left">
+            <button ion-fab><ion-icon name="logo-facebook"></ion-icon></button>
+            <button ion-fab><ion-icon name="logo-twitter"></ion-icon></button>
+            <button ion-fab><ion-icon name="logo-googleplus"></ion-icon></button>
+            <button ion-fab><ion-icon name="logo-vimeo"></ion-icon></button>
+          </ion-fab-list>
+        </ion-fab>
+
 </ion-content>
